2001-01-18  Larry Jones  <larry.jones@sdrc.com>

	* log.c (option_revlist, revlist, log_usage, cvslog,
	log_parse_revlist, log_expand_revlist, log_version_requested): Add
	support for :: for exclusive ranges.
	* admin.c (admin_usage): Reorder -o to be parallel to log -r.
	* sanity.sh (log): New tests for above.

2001-01-18  Derek Price  <derek.price@openavenue.com>

	* main.c: Add '2001' to the range of copyright years listed by the
	--version option
	* version.c.in (version): check current_parsed_root before its isremote
	member to avoid a core dump
	* sanity.sh (version): add a test for the version command

	* version.c: regenerated

2001-01-12  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c, rcs.h (RCS_lock, RCS_unlock): Use RCS_gettag to find the
	correct revision so that symbolic tags work correctly.  (This
	requires removing the "const" from the rev parameter since it's
	passed to RCS_gettag which might modify it.)
	(Reported by irina sturm <irina.sturm@st.com>.)

2001-01-11  Larry Jones  <larry.jones@sdrc.com>

	* run.c (close_on_exec): Remove check for FD_CLOEXEC.  As far as I
	can see, it's *never* been defined, which defeats the whole point.
	If F_SETFD is defined, it's probably safe to use it.

	* server.c (do_cvs_command): Call close_on_exec on the protocol and
	flow control pipes in the child process so they don't get inherited
	by any subsidiary processes.
	(Reported by Tristan Gingold <tgi@netgem.com>.)

	* cvs.h (free_cvsroot_t): Spell correctly (was free_CVSroot_t).

2001-01-10  Derek Price  <derek.price@openavenue.com>
	    Rex Jolliff  <Rex_Jolliff@notes.ymp.gov>

	* build_src.com: VMS changes
	* filesubr.c: replace calls to unlink() with CVS_UNLINK() for VMS
	* rcs.c: ditto

2001-01-10  Derek Price  <derek.price@openavenue.com>

	* main.c (current_root): explicitly list this as a static global

2001-01-10  Derek Price  <derek.price@openavenue.com>

	* cvs.h (get_cvs_port_number): change name & prototype from
	get_port_number